Alterado o Css e HTML dos templates co2e-nao-viavel e co2e

--- a/template/co2e-nao-viavel.html
+++ b/template/co2e-nao-viavel.html
@@ -51,6 +51,8 @@
       text-align: center;
       font-family: 'Arial Black', sans-serif;
       font-size: 32px;
+      font-weight: bold;
+      text-transform: uppercase;
       color: #008482;
     }
 
@@ -59,6 +61,8 @@
       text-align: center;
       font-family: 'Arial Black', sans-serif;
       font-size: 32px;
+      font-weight: bold;
+      text-transform: uppercase;
       color: #008482;
     }
 
@@ -67,6 +71,8 @@
       text-align: center;
       font-family: 'Arial Black', sans-serif;
       font-size: 32px;
+      font-weight: bold;
+      text-transform: uppercase;
       color: #008482;
     }
 
@@ -99,6 +105,7 @@
       font-family: Arial, Helvetica, sans-serif;
       font-size: 16px;
       color: #595959;
+      margin-top: 64px;
     }
 
     .box-green {
@@ -136,7 +143,7 @@
     }
 
     .text9 {
-      margin-top: 32px;
+      margin-top: 64px;
       margin-left: auto;
       margin-right: auto;
       text-align: center;
@@ -146,8 +153,18 @@
       width: 416px;
     }
 
+    .text10 {
+      margin-top: 24px;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+      font-family: Arial, sans-serif;
+      font-size: 16px;
+      color: #595959;
+      width: 416px;
+    }
     .box-final {
-      margin-top: 32px;
+      margin-top: 48px;
       width: 100%;
       text-align: center;
     }
@@ -175,22 +192,19 @@
   <div class="text3">
     <span>{{destino}}</span>
   </div>
-
   <div class="text6">
     <strong class="span-poxa">Poxa, que pena ;(</strong>
   </div>
-
   <div class="text9">
-    <p>
-      Nosso algoritmo não conseguiu identificar uma malha ferroviária viável para o trecho informado.
-    </p>
+    <p>Nosso algoritmo não conseguiu identificar uma </p>
+    <p>malha ferroviária viável para o trecho informado.</p>
   </div>
 
-  <div class="text9">
-    <p>
-      Mas não se preocupe, pois o primeiro passo já foi dado. Estamos com os seus dados e entraremos em contato
-      para entender mais de perto as possíveis demandas.
-    </p>
+  <div class="text10">
+    <p>Mas não se preocupe, pois o primeiro passo já foi</p>
+    <p>dado. Estamos com os seus dados e entraremos</p>
+    <p>em contato para entender mais de perto as</p>
+    <p>possíveis demandas.</p>
   </div>
   <div class="box-final">
     <img src="{{dizersimImg}}" alt="dizersim" />
