--- a/template/co2e.html
+++ b/template/co2e.html
@@ -51,6 +51,8 @@
       text-align: center;
       font-family: 'Arial Black', sans-serif;
       font-size: 32px;
+      font-weight: bold;
+      text-transform: uppercase;
       color: #008482;
     }
 
@@ -59,6 +61,8 @@
       text-align: center;
       font-family: 'Arial Black', sans-serif;
       font-size: 32px;
+      font-weight: bold;
+      text-transform: uppercase;
       color: #008482;
     }
 
@@ -67,6 +71,8 @@
       text-align: center;
       font-family: 'Arial Black', sans-serif;
       font-size: 32px;
+      font-weight: bold;
+      text-transform: uppercase;
       color: #008482;
     }
 
@@ -88,8 +94,9 @@
     div.text5 {
       width: 100%;
       text-align: center;
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: "Arial Black", Helvetica, sans-serif;
       font-size: 44px;
+      font-weight: bold;
       color: #008482;
     }
 
@@ -113,18 +120,26 @@
 
     .box-green-table {
       width: 100%;
+      padding: 3%;
     }
 
-    .box-green-car,
+    .box-green-car {
+      text-align: center;
+      vertical-align: bottom;
+      padding-bottom: 3%;
+    }
+    
     .box-green-tree {
       text-align: center;
       vertical-align: bottom;
+      padding-bottom: 1%;
     }
 
     .box-green-tree-p,
     .box-green-car-p {
       text-align: center;
       width: 50%;
+      padding-bottom: 10px;
     }
 
     .box-green-text {
@@ -136,7 +151,7 @@
     }
 
     .text9 {
-      margin-top: 32px;
+      margin-top: 64px;
       margin-left: auto;
       margin-right: auto;
       text-align: center;
@@ -168,7 +183,7 @@
   </div>
 
   <div class="text1">
-    <span>{{origem}}</span>
+      <span>{{origem}}</span>
   </div>
   <div class="text2">
     <p>X</p>
@@ -188,7 +203,7 @@
   <div class="text5">
     <span>{{resultado}}</span>
   </div>
-  <div class="text6">toneladas de CO2e!</div>
+  <div class="text6">toneladas de CO2!</div>
 
   <div class="box-green">
 
@@ -205,9 +220,9 @@
       </tr>
       <tr>
         <td class="box-green-car-p">
-          <p class="box-green-text">
-            Isso equivale à emissão anual de <strong>{{veiculos}}</strong> veículos.
-          </p>
+            <p class="box-green-text">Isso equivale à </p>
+            <p class="box-green-text">emissão anual</p>
+            <p class="box-green-text"> de <strong>{{veiculos}}</strong> veículos.</p>
         </td>
         <td class="box-green-tree-p">
           <p class="box-green-text">
